src/tests/errors/syntax/013.ura
// parse_errors/024 — fn declaration missing return type before `:`
use "@/header"

fn greet():
    output("hi\n")

main():
    greet()